_rendered/apps/kargo/admissionregistration_k8s_io-mutatingwebhookconfiguration-kargo.yaml
# Source: kargo/charts/kargo/templates/kubernetes-webhooks-server/webhooks.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: kargo
  labels:
    helm.sh/chart: kargo-1.11.4
    app.kubernetes.io/name: kargo
    app.kubernetes.io/instance: kargo
    app.kubernetes.io/version: "v1.11.4"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: kubernetes-webhooks-server
  annotations:
    cert-manager.io/inject-ca-from: kargo/kargo-webhooks-server
webhooks:
- name: freight.kargo.akuity.io
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    service:
      namespace: kargo
      name: kargo-webhooks-server
      path: /mutate-kargo-akuity-io-v1alpha1-freight
  rules:
  - scope: Namespaced
    apiGroups: ["kargo.akuity.io"]
    apiVersions: ["v1alpha1"]
    resources: ["freights"]
    operations: ["CREATE", "UPDATE"]
  failurePolicy: Fail
- name: promotion.kargo.akuity.io
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    service:
      namespace: kargo
      name: kargo-webhooks-server
      path: /mutate-kargo-akuity-io-v1alpha1-promotion
  rules:
  - scope: Namespaced
    apiGroups: ["kargo.akuity.io"]
    apiVersions: ["v1alpha1"]
    resources: ["promotions"]
    operations: ["CREATE", "UPDATE"]
  failurePolicy: Fail
- name: stage.kargo.akuity.io
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    service:
      namespace: kargo
      name: kargo-webhooks-server
      path: /mutate-kargo-akuity-io-v1alpha1-stage
  rules:
  - scope: Namespaced
    apiGroups: ["kargo.akuity.io"]
    apiVersions: ["v1alpha1"]
    resources: ["stages"]
    operations: ["CREATE", "UPDATE"]
  failurePolicy: Fail
- name: warehouse.kargo.akuity.io
  admissionReviewVersions: ["v1"]
  sideEffects: None
  clientConfig:
    service:
      namespace: kargo
      name: kargo-webhooks-server
      path: /mutate-kargo-akuity-io-v1alpha1-warehouse
  rules:
  - scope: Namespaced
    apiGroups: ["kargo.akuity.io"]
    apiVersions: ["v1alpha1"]
    resources: ["warehouses"]
    operations: ["CREATE", "UPDATE"]
  failurePolicy: Fail
